objects/Shipping_Method__c.object
<CustomObject>
    <description>Oracle Shipping Methods</description>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mode_of_Transport__c</fullName>
        <label>Mode of Transport</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Name__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Level_Name__c</fullName>
        <label>Service Level Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Shipping Method</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Carrier__c</columns>
        <columns>Mode_of_Transport__c</columns>
        <columns>Service_Level_Name__c</columns>
        <columns>Oracle_Name__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Shipping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>